force-app/main/default/objects/Vacancy_Notice__c/Vacancy_Notice__c.object-meta.xml
<CustomObject>
    <label>Vacancy Notice</label>
    <nameField>
        <label>Vacancy Notice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancy Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>