force-app/main/default/objects/Vacancy_Notice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vacancy Notices</relationshipLabel>
    <relationshipName>Vacancy_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>