force-app/main/default/objects/Vacancy_Notice__c/fields/Date_of_Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Vacancy__c</fullName>
    <label>Date of Vacancy</label>
    <type>Date</type>
</CustomField>