force-app/main/default/objects/Vacancy_Notice__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Vacancy Notices</relationshipLabel>
    <relationshipName>Vacancy_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>