force-app/main/default/objects/Vacancy_Notice__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>