force-app/main/default/objects/Vacancy_Notice__c/fields/Reason_Long__c.field-meta.xml
<CustomField>
    <fullName>Reason_Long__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>