force-app/main/default/objects/Vacancy_Notice__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Vacancy Notices</relationshipLabel>
    <relationshipName>Vacancy_Notices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>