force-app/main/default/objects/Vacancy_Notice__c/fields/Unit_Condition__c.field-meta.xml
<CustomField>
    <fullName>Unit_Condition__c</fullName>
    <label>Unit Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Horrible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>